--- a/awscompose/readme
+++ b/awscompose/readme
@@ -7,3 +7,9 @@ https://docs.aws.amazon.com/sdk-for-go/api/service/ec2/#EC2.AttachInternetGatewa
 
 https://docs.aws.amazon.com/AWSEC2/latest/APIReference/API_CreateNetworkInterface.html
 
+https://docs.aws.amazon.com/AWSEC2/latest/APIReference/API_AllocateAddress.html
+
+/ To allocate an Elastic IP address for EC2-VPC
+/ To associate an Elastic IP address with a network interface
+
+https://github.com/aws/aws-sdk-go/blob/main/service/ec2/examples_test.go
